# IPE-LatentCircuitIdentification

./: .gitignore  notes.md  pyproject.toml  quickstart.ipynb  run_test.py  tests.ipynb  various_tests.ipynb
.github/workflows/: pytest.yml
backward_search/: indirect_effect_gpt2.py  indirect_effect_qwen.py  run_search_gpt2.py  run_search_qwen.py
backward_search/utils/: component_contributions.py  graph_search.py  metrics.py  nodes.py
backward_search_approximated/: pyproject.toml
backward_search_approximated/source/: conf.py  index.rst
backward_search_approximated/source/api/: graph_search.rst  index.rst  nodes.rst
backward_search_approximated/source/guides/: quickstart.rst
backward_search_approximated/utils/: attention.py  graph_search.py  metrics.py  nodes.py  paths.py
documentation/source/: conf.py
documentation/source/api/: attention.rst  decoding_plot.rst  experiment.rst  graph_search.rst  image_nodes.rst  index.rst  metrics.rst  model.rst  (+3 more)
examples/: quickstart.ipynb  understanding_search_methods.ipynb
experiments/MIB/: create_submission.py  run_search.py
experiments/resource_consumption/: evaluate_experiments.py  plot.py  result_visualization.ipynb
experiments/website_data/: create_baseline_paths.py
src/ipe/: attention.py  experiment.py  graph_search.py  metrics.py  miscellanea.py  nodes.py  paths.py
test/: test_experiment.py  test_nodes.py
web_app/: Dockerfile  app.py  docker-compose.yml  path_copy_utility.py  requirements.txt  setup.py
web_app/configuration/: models_config.json  sample_prompts.json
web_app/templates/: index.html
(+150 files in other folders)
