[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backward-search-approximated"
version = "0.1.0"
description = "Latent Circuit Identification via backward search"
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
